--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+    <p>&copy; 2024 Cybotic. All rights reserved.</p>
     <ul>
       <li><a href="#">Privacy Policy</a></li>
       <li><a href="#">Terms of Service</a></li>
